# arachno-pilot

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile  stairs-walk-claude.md  stairs-walk-codex.md  stairs-walk-merged.md
.cargo/: config.toml
.github/workflows/: ci.yml
apps/arachno-brain/: Cargo.toml
apps/arachno-brain/src/: dashboard_page.rs  main.rs
apps/arachno-calibrate/: Cargo.toml
apps/arachno-calibrate/src/: main.rs  workspace.rs
apps/arachno-dashboard/: Cargo.toml
apps/arachno-dashboard/src/: main.rs
apps/arachno-fw-info/: Cargo.toml
apps/arachno-fw-info/src/: main.rs
apps/arachno-probe/: Cargo.toml
apps/arachno-probe/src/: main.rs
apps/arachno-sim/: Cargo.toml
apps/arachno-sim/src/: main.rs
config/robot/: arm-servo-config.toml  default.toml  host-usb.toml  jetson-onboard.toml  leg-workspace.toml  servo-config.toml  servo-poses.toml  servo-ranges.toml  servo-semantic-calibration.toml
crates/arachno-camera/: Cargo.toml
crates/arachno-camera/src/: lib.rs
crates/arachno-control/: Cargo.toml
crates/arachno-control/src/: lib.rs  trajectory.rs
crates/arachno-control/tests/: sim_smoke.rs
crates/arachno-core/: Cargo.toml
crates/arachno-core/src/: lib.rs
crates/arachno-feetech-sts/: Cargo.toml
crates/arachno-feetech-sts/src/: lib.rs  registers.rs
crates/arachno-hal/: Cargo.toml
crates/arachno-hal/src/: lib.rs
crates/arachno-imu-host/: Cargo.toml
crates/arachno-imu-host/src/: lib.rs
crates/arachno-imu-proto/: Cargo.toml
crates/arachno-imu-proto/src/: lib.rs
crates/arachno-msg/: Cargo.toml
crates/arachno-msg/src/: lib.rs
crates/arachno-sim-hal/: Cargo.toml
crates/arachno-sim-hal/src/: lib.rs
docs/: architecture.md  roadmap.md
firmware/: Cargo.toml  README.md  rust-toolchain.toml
firmware/rp2040-imu-bridge/: Cargo.toml  build.rs  memory.x
firmware/rp2040-imu-bridge/src/: lib.rs  main.rs
native/: CMakeLists.txt  README.md
python/: README.md  pyproject.toml
python/src/arachno_ml/: __init__.py  claude_quota.py  codex_quota.py  quota_common.py  train_policy.py  training_data.py
