[workspace]
members = [
    "apps/arachno-brain",
    "apps/arachno-calibrate",
    "apps/arachno-fw-info",
    "apps/arachno-probe",
    "crates/arachno-camera",
    "crates/arachno-control",
    "crates/arachno-core",
    "crates/arachno-feetech-sts",
    "crates/arachno-hal",
    "crates/arachno-imu-host",
    "crates/arachno-imu-proto",
    "crates/arachno-msg",
]
exclude = ["firmware"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Uli", "OpenAI Codex"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serialport = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
