[workspace]
members = ["rp2040-imu-bridge"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Uli", "OpenAI Codex"]

[workspace.dependencies]
arachno-imu-proto = { path = "../crates/arachno-imu-proto" }
cortex-m-rt = "0.7"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "rp2040", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = "s"
