[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arachno-ml"
version = "0.1.0"
description = "Learning and experiment sidecar for arachno-pilot"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
train = [
    "onnx>=1.16",
    "typer>=0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}
