[package]
name = "arachno-calibrate"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arachno-core = { path = "../../crates/arachno-core" }
arachno-feetech-sts = { path = "../../crates/arachno-feetech-sts" }
arachno-hal = { path = "../../crates/arachno-hal" }
arachno-msg = { path = "../../crates/arachno-msg" }
clap.workspace = true
serde.workspace = true
toml.workspace = true
