[package]
name = "arachno-fw-info"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arachno-core = { path = "../../crates/arachno-core" }
arachno-imu-host = { path = "../../crates/arachno-imu-host" }
clap.workspace = true
toml.workspace = true
