[package]
name = "arachno-feetech-sts"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
arachno-core = { path = "../arachno-core" }
arachno-hal = { path = "../arachno-hal" }
arachno-msg = { path = "../arachno-msg" }
serialport.workspace = true
tracing.workspace = true
